--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,7 @@
 <body> 
 <h1>Horay!</h1> 
 <p>I done it!.</p>
-</p> <a href="https://bekhruz-train-your-math.herokuapp.com">Chingergek</a>
+<p> <a href="https://bekhruz-train-your-math.herokuapp.com">Chingergek</a>
 </p> 
 </body> 
 </html>
